fix the doulbe scroll bars by creating overflow:hidden on the body element

--- a/app/assets/stylesheets/contentLayout.css.scss
+++ b/app/assets/stylesheets/contentLayout.css.scss
@@ -53,7 +53,7 @@ $btn-active-txt: 0 0 8px rgba(0, 0, 0, .75);
 
 body {
 	font-family: $main-font;
-	overflow-x: hidden;
+	overflow: hidden;
 	box-shadow: inset 0 0 72px rgba(0, 0, 0, .25);
 	background:$main-grey;
 }
